Trying to get out of a funk

--- a/Problem3/p3.md
+++ b/Problem3/p3.md
@@ -32,3 +32,11 @@ Once a factor is known, square it, cube it, and son and see if the number is div
 
 Quotient = Number_sub / Prime^x
 
+
+------
+Resources:
+
+https://en.wikipedia.org/wiki/Lucas%E2%80%93Lehmer_primality_test
+https://en.wikipedia.org/wiki/AKS_primality_test
+https://en.wikipedia.org/wiki/Semiprime
+https://en.wikipedia.org/wiki/Perfect_power
