--- a/Problem9/p9.md
+++ b/Problem9/p9.md
@@ -10,26 +10,4 @@ Find the product abc.
 ----
 Strategy:
 
-- Find the opportunity for reduced row echelon?
-
-a + b + c = 1000
-a^2 + b^2 - c^2 = 0
-```
-| 1  1   1 1000 |
-| 1  1  -1    0 |
-```
-
-Nah
-
-- Find the first sum of a + b + c = 1000 
-- Test if a < b < c
-- iterate and reduce (a,b,c) until a < b < c
-- Test if a^2 + b^2 = c^2
-- If all true, return the product abc
-
-OR
-
-- Iterate through (a,b) until a^2 + b^2 = c^2
-- Test if a < b < c
-- Test if a + b + c = 1000
-    
+- Brute force a and b until a < b < c, a^2 + b^2 = c^2, and a + b + c = 1000 are all true
