--- a/Problem11/p11.md
+++ b/Problem11/p11.md
@@ -25,3 +25,14 @@ In the 20×20 grid below, four numbers along a diagonal line have been marked in
 The product of these numbers is 26 × 63 × 78 × 14 = 1788696.
 
 What is the greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in the 20×20 grid?
+
+------
+
+Strategy
+
+- Create a matrix and load values into a list of lists
+- Traverse each element in the row 
+- Create a temp list comprising of a legal set of elements extending out in eight directions from the origin element
+  - If the set is "illegal" i.e. the range goes beyond the boundaries of the grid, set phantom elements to zero or skip
+- Compute the product of all elements in this tmp list and store it in a results list
+- Find the max value in the results list and return it
