Problem 15 solved with python

--- a/Problem15/p15.md
+++ b/Problem15/p15.md
@@ -7,8 +7,21 @@ How many such routes are there through a 20×20 grid?
 
 Strategy
 
-- Starting from an origin point (x,y) represented by (0,0)
-- Identify the endpoint (x+end,y+end) represented in the example as (1,1) 
-    - (1,1) represents the end of a 2x2 grid assuming (0,0) is the origin
-- Iterate through a combination of choices to either go right or down through each iteration
-- ? Start with the most expensive path from (0,0) to (x+end,y+end)? and work backwards?
+- Looked this up; using combination formula
+  - n!/(k!(n-k)!)
+  - where n is the number of squares to traverse
+  - k is the number or directions that can be taken per square
+
+
+
+Notes:
+
+2x2 grid
+
+Opportunities to go right at first attempt: 2,1,0
+Opportunities to go right at second attempt: 2,1,0
+Opportunities to go right at third attempt: 2,1,0
+
+Opportunities to go right at first attempt: 2 therefore only 2 down for all attempts
+Opportunities to go right at first attempt: 1 therefore either:
+- one attempt down
